# lasty-ld25-villain

./: .gitignore  CMakeLists.txt  ProjectHome.md  README.txt  camera.cpp  camera.h  game.cpp  game.h  globals.h  image.cpp  image.h  main.cpp  obj.cpp  obj.h  os_utils.cpp  os_utils.h  prim.cpp  prim.h  program.cpp  program.h  vertex.cpp  vertex.h
Data/: arrow.mtl  cash.mtl  cube.mtl  enemy.mtl  floor.mtl  goldbars.mtl  level1.txt  player.mtl  prog1.glsl  prog_lighting.glsl  wall.mtl
SrcData/: arrow.blend  cash.blend  cube.blend  enemy.blend  floor.blend  goldbars.blend  player.blend  texts.pdn  title.pdn  wall.blend
